# cpplox

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
include/: Callable.hpp  Environment.hpp  Expression.hpp  ExpressionPrinter.hpp  Globals.hpp  Interpreter.hpp  LoxClass.hpp  LoxRuntimeError.hpp  Object.hpp  Parser.hpp  Resolver.hpp  Scanner.hpp  Statement.hpp  Token.hpp
lox/: branch_test.lox  class_test.lox  closure_test.lox  for_test.lox  function_test.lox  static_scope.lox  while_test.lox
src/: Callable.cpp  Environment.cpp  Globals.cpp  Interpreter.cpp  Object.cpp  Parser.cpp  Resolver.cpp  Scanner.cpp  main.cpp
test/: Scanner.cpp  Token.cpp  main.cpp
